--- a/04.04-constructor/index.html
+++ b/04.04-constructor/index.html
@@ -14,6 +14,8 @@
       sex
 
       constructor (props) {
+        if (!props.name)
+          throw Error('Nome é obrigatório')
         this.name = props.name
         this.age = props.age
         this.sex = props.sex
